YAMLs/k8s-ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-demo
  annotations:
    kubernetes.io/ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: nginx-demo.io
    http:
      paths:
      - path: /demo
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-demo
            port:
              number: 80
